clusters/home/apps/volcano-system/volcano/configs/volcano-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: volcano-ingressroute
  namespace: volcano-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://volcano.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Volcano
    gethomepage.dev/group: Programming
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: volcano # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Volcano
    #gethomepage.dev/widget.type: "volcano"
    #gethomepage.dev/widget.url: "https://volcano.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`volcano.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: volcano-dashboard
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: volcano-certificate-secret
